# crates

./: .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  bootstrap.sh  deny.toml  flake.nix  release-plz.toml
.cargo/: config.toml
.claude/: settings.local.json
.git-hooks/: local-pre-commit
.github/: dependabot.yml  labeler.yml
.github/agents/: rust-expert.md
.github/workflows/: agentics-maintenance.yml  ai-auditor.lock.yml  api-docs.yml  auto-merge.yml  auto-triage-issues.lock.yml  ci.yml  clippy.yml  codeql.yml  daily-secrets-analysis.lock.yml  deny.yml  docs.yml  duplicate-code-detector.lock.yml  hooks-sync.yml  label-sync.yml  labeler.yml  osv-scan.yml  pr-size-labeler.yml  release-plz.yml  release.yml  security.yml
bin-explorer/: AGENTS.md  CHANGELOG.md  Cargo.toml
bin-explorer/src/: cache.rs  main.rs  tui.rs
bin-explorer/src/analysis/: mod.rs
cleanup/: CHANGELOG.md  Cargo.toml  README.md
cleanup/src/: main.rs
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/commands/: copyright.rs  cost.rs  dev.rs  pre_commit.rs  secrets.rs  version.rs
config/linear/: resq.json
crates/bin-explorer/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/bin-explorer/src/: lib.rs  main.rs
crates/bin-explorer/src/analysis/: mod.rs
crates/cleanup/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/cleanup/src/: main.rs
crates/cli/: AGENTS.md  CHANGELOG.md  README.md
crates/cli/src/: gitignore.rs  lib.rs  main.rs  utils.rs
crates/cli/src/commands/: audit.rs  dev.rs  docs.rs  explore.rs  lqip.rs  mod.rs  tree_shake.rs  version.rs
crates/deploy-cli/: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/deploy-cli/src/: docker.rs  k8s.rs  main.rs
crates/flame-graph/: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/flame-graph/src/: main.rs
crates/health-checker/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/health-checker/src/: main.rs  services.rs
crates/log-viewer/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/log-viewer/src/: parser.rs  sources.rs
crates/perf-monitor/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/perf-monitor/src/: main.rs
crates/resq-ai/: CHANGELOG.md  Cargo.toml
crates/resq-ai/src/: anthropic.rs  config.rs  gemini.rs  lib.rs  openai.rs  provider.rs  token.rs
crates/resq-bin/: CHANGELOG.md
crates/resq-bin/src/: cache.rs  lib.rs  main.rs  tui.rs
crates/resq-bin/src/analysis/: mod.rs
crates/resq-clean/: CHANGELOG.md  Cargo.toml
crates/resq-clean/src/: main.rs
crates/resq-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/resq-cli/src/: gitignore.rs  lib.rs  main.rs  utils.rs
crates/resq-cli/src/commands/: audit.rs  commit.rs  completions.rs  copyright.rs  dev.rs  explore.rs  format.rs  hook_templates.rs  hooks.rs  mod.rs  pre_commit.rs  secrets.rs
crates/resq-cli/templates/local-hooks/cpp/: pre-push
crates/resq-cli/templates/local-hooks/dotnet/: pre-push
crates/resq-cli/templates/local-hooks/nix/: pre-push
crates/resq-cli/templates/local-hooks/node/: pre-push
crates/resq-cli/templates/local-hooks/python/: pre-push
crates/resq-cli/templates/local-hooks/rust/: pre-push
crates/resq-cli/tests/: format.rs  install_hooks.rs
crates/resq-deploy/: CHANGELOG.md
crates/resq-deploy/src/: main.rs
crates/resq-dsa/: CHANGELOG.md  Cargo.toml
crates/resq-dsa/examples/: bloom_dedup.rs  combined_pipeline.rs  count_min_traffic.rs  graph_routing.rs  heap_knn.rs  trie_autocomplete.rs
crates/resq-dsa/src/: bloom.rs  count_min.rs  graph.rs  heap.rs  lib.rs  trie.rs
crates/resq-flame/: CHANGELOG.md
crates/resq-flame/src/: main.rs
crates/resq-health/: CHANGELOG.md
crates/resq-health/src/: integration.rs  main.rs  services.rs
crates/resq-logs/: CHANGELOG.md
crates/resq-logs/src/: main.rs  parser.rs  sources.rs
crates/resq-perf/: CHANGELOG.md  Cargo.toml  README.md
crates/resq-perf/src/: main.rs
crates/resq-tui/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/resq-tui/src/: console.rs  detect.rs  lib.rs  progress.rs  spinner.rs  table.rs  terminal.rs  theme.rs
deploy-cli/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
deploy-cli/src/: docker.rs  k8s.rs  main.rs
docs/superpowers/plans/: 2026-03-17-linear-bootstrap.md
docs/superpowers/specs/: 2026-03-17-linear-bootstrap-design.md  2026-03-17-rust-workspace-optimization-design.md
examples/: README.md
examples/resq-bin/: README.md  demo.c  run_demo.sh
examples/resq-clean/: README.md  create_mess.sh
examples/resq-cli/: README.md
examples/resq-cli/sample-project/src/: config.rs  lib.rs  main.rs  server.py
examples/resq-deploy/: README.md  docker-compose.yml
examples/resq-flame/: README.md  cpu_burner.py
examples/resq-health/: README.md  mock_services.py
examples/resq-logs/: README.md  generate_logs.py
examples/resq-perf/: README.md  mock_status_server.py
flame-graph/: CHANGELOG.md  Cargo.toml  README.md
flame-graph/src/: main.rs
health-checker/: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
health-checker/src/: integration.rs  main.rs  services.rs
log-viewer/: CHANGELOG.md  Cargo.toml  README.md
log-viewer/src/: main.rs  parser.rs  sources.rs
perf-monitor/: CHANGELOG.md  Cargo.toml  README.md
perf-monitor/src/: main.rs
resq-dsa/: Cargo.toml
resq-dsa/src/: count_min.rs
resq-dsa/tests/: complexity.rs
resq-tui/: AGENTS.md  CHANGELOG.md  Cargo.toml
resq-tui/src/: lib.rs
scripts/: linear-bootstrap.sh
scripts/tests/: linear-bootstrap-smoke.sh
