# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    "resq-tui",
    "cli",
    "deploy-cli",
    "health-checker",
    "log-viewer",
    "perf-monitor",
    "flame-graph",
    "bin-explorer",
    "cleanup",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/resq-software/cli"

[workspace.dependencies]
anyhow = "1.0"
futures = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28.1", default-features = false, features = ["events"] }
glob = "0.3"
once_cell = "1.21"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm", "macros"] }
regex = "1.12"
reqwest = { version = "0.13.2", features = ["json", "rustls", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
