# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "bin-explorer"
version = "0.1.0"
edition = "2021"
description = "Binary and machine-code analyzer for ResQ"
authors = ["ResQ Team"]
license = "Apache-2.0"
publish = false

[[bin]]
name = "bin-explorer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
object = "0.38"
ratatui = { workspace = true }
crossterm = { workspace = true }
resq-tui = { path = "../../libs/rust/resq-tui" }
regex = { workspace = true }
toml = { workspace = true }
crc32fast = "1.5"
capstone = "0.12"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
