# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-bin-explorer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary and machine-code analyzer for ResQ binaries"
repository.workspace = true
keywords = ["binary", "analysis", "disassembly", "elf", "resq"]
categories = ["command-line-interface", "command-line-utilities"]

[lib]
name = "bin_explorer"
path = "src/lib.rs"

[[bin]]
name = "resq-bin"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
object = "0.38"
ratatui = { workspace = true }
crossterm = { workspace = true }
resq-tui = { path = "../resq-tui", version = "0.1" }
regex = { workspace = true }
toml = { workspace = true }
crc32fast = "1.5"
capstone = "0.14"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
