# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-cli"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Developer CLI for the ResQ autonomous drone platform"
keywords = ["cli", "resq", "drone", "devtools", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
image = "0.25"
once_cell = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
resq-tui = { workspace = true }

# Secret scanner performance
aho-corasick = "1.1"
rayon = "1.10"

# Shell command helpers
shlex = "1.3"

[lib]
path = "src/lib.rs"

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "resq"
path = "src/main.rs"

[lints]
workspace = true
