# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "deploy-cli"
version = "0.1.0"
edition = "2021"
description = "Interactive deployment TUI for ResQ infrastructure"
authors = ["ResQ Team"]
license = "Apache-2.0"

[[bin]]
name = "deploy-cli"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = "0.4"

# Shared TUI components
resq-tui = { path = "../../libs/rust/resq-tui" }

# [profile.release]

[lints]
workspace = true
