# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-flamegraph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SVG CPU flame graph profiler for ResQ services"
repository.workspace = true
keywords = ["profiling", "flamegraph", "performance", "svg", "resq"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "resq-flame"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Flame graph generation
inferno = "0.12"

# HTTP client for HCE integration
reqwest = { workspace = true }
tokio = { workspace = true }

# JSON parsing for .cpuprofile format
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Timestamps
chrono = { workspace = true }

# Auto-open browser
open = "5"

# File globbing for 0x output
glob = "0.3"

ratatui = { workspace = true }
crossterm = { workspace = true }

# Shared TUI components
resq-tui = { path = "../resq-tui", version = "0.1" }

# [profile.release]
# opt-level = 3
# lto = true
# strip = true

[lints]
workspace = true
