# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "health-checker"
version = "0.1.0"
edition = "2021"
description = "Health check dashboard for ResQ services"
authors = ["ResQ Team"]
license = "Apache-2.0"

[dependencies]
# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async utilities
futures = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Directory traversal (symlink-safe)
walkdir = { workspace = true }

# Time/Duration
chrono = { workspace = true }

# Shared TUI components
resq-tui = { path = "../../libs/rust/resq-tui" }

[lints]
workspace = true
