# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-health-checker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Service health diagnostic dashboard for ResQ platform"
repository.workspace = true
keywords = ["tui", "health", "monitoring", "resq", "diagnostics"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "resq-health"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async utilities
futures = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Directory traversal (symlink-safe)
walkdir = { workspace = true }

# Time/Duration
chrono = { workspace = true }

# Shared TUI components
resq-tui = { workspace = true }

[lints]
workspace = true
