# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-log-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-source log aggregator and viewer for ResQ services"
repository.workspace = true
keywords = ["tui", "logs", "aggregator", "resq", "viewer"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "resq-logs"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching
regex = "1"

# Shared TUI components
resq-tui = { path = "../resq-tui", version = "0.1" }

# [profile.release]

[lints]
workspace = true
