# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "perf-monitor"
version = "0.1.0"
edition = "2021"
description = "Real-time performance monitoring TUI for ResQ services"
authors = ["ResQ Team"]
license = "Apache-2.0"

[[bin]]
name = "perf-monitor"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
anyhow = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (for file watching)
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "fs",
] }
reqwest = { version = "0.13", features = ["blocking", "json"] }

# Binary analysis and process info (Memory Profiler)
object = "0.38"
procfs = "0.18"
addr2line = "0.26"

# Shared TUI components
resq-tui = { path = "../../libs/rust/resq-tui" }

[lints]
workspace = true
