# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-tui"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared TUI components and themes for ResQ developer tools"
keywords = ["tui", "ratatui", "cli", "resq", "terminal"]
categories = ["command-line-interface", "visualization"]

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = "0.2"

[lints]
workspace = true
