# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-clean"
version.workspace = true
edition.workspace = true
license.workspace = true
description = ".gitignore-aware workspace cleaner for ResQ development"
repository.workspace = true
keywords = ["cleanup", "workspace", "gitignore", "resq", "development"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "resq-clean"
path = "src/main.rs"

[dependencies]
ignore = "0.4"
walkdir = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
colored = "3.1"
resq-tui = { workspace = true }

[lints]
workspace = true
