# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-logs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-source log aggregator and viewer for ResQ services"
repository.workspace = true
keywords = ["tui", "logs", "aggregator", "resq", "viewer"]
categories = ["command-line-interface", "command-line-utilities"]

[[bin]]
name = "resq-logs"
path = "src/main.rs"

[dependencies]
# Shared TUI components (re-exports ratatui + crossterm)
resq-tui = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# Time
chrono = { workspace = true }

# Pattern matching
regex = { workspace = true }

# Error handling
anyhow = { workspace = true }

# [profile.release]

[lints]
workspace = true
