# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "resq-ai"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-provider LLM abstraction for ResQ developer tools"
keywords = ["ai", "llm", "anthropic", "openai", "gemini"]
categories = ["api-bindings", "development-tools"]

[dependencies]
anyhow = { workspace = true }
dirs = "6.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
